syntax = "proto3";
package pb.common;

import "common/game_consts.proto";

option go_package = "gitlab.com/vectorup/asset-pb/go/common";


// Scenario 集合了剧本和牌的概念
message Scenario {
    int64  Id            = 1;
    string Name          = 2;   //
    int32  Type          = 3;   // * SCENARIO_TYPE_*
    string category      = 4;   // 类别（如：房地产)
    // 小生意、大机会 相关字段
    int32 C_Price            = 5;   // 价格
    int32 C_DownPayment      = 6;   // 首付
    int32 C_Loan             = 7;   // 贷款
    int32 C_Interest         = 8;   // 贷款月利息
    int32 C_Income           = 9;   // 经营收入
    int32 C_MonthCashFlow    = 10;  // 月现金流
    float C_YieldRatePCT     = 11;  // 年化收益率（百分比)
    int32 C_HighPrice        = 12;  // 最高价
    int32 C_LowPrice         = 13;  // 最低价

    int32 C_Shard            = 14;  // 份额
    int32 C_Mark             = 15;  //

    // 意外消费金额
    int32 A_Cash = 16;  // 意外产生的金额

    // 市场风云
    int32 MI_TotalPrice = 17;  // 总价
    int32 MI_UnitPrice = 18;   // 单价
    int32 MI_Multiple = 19;    // 倍数
    float MI_PerfPCT = 20;     // 收益率调整(百分比)
    int32 MI_Shard =  21;
    int32 MI_Mark =  22;

    string Code  = 23;         // 标的代码
    string Desc = 24;          // 描述
    string priceInfo = 25;     // 价格信息字符串 (如: "¥1000万/间")

    string imgFile = 26;        // 插图文件，相对地址( BASE_IMG_URL: http://111.230.15.121:10080/static/game)
    int32  babyExpense = 27;    // 生孩子的开销

    // 市场波动的具体类型
    MarketChangeType.Enum MC_Type = 28;
    // 是否影响所有人
    bool MC_AffectAll = 29;
    // 变化比例，以百分数计算
    // 不管是上升还是下降，这里的值都大于 0
    // 例如，房租上升 10% 这里就是 10，下降 10% 这里也是 10
    float MC_Ratio = 30;
}
